# pynmeagps

./: .coveragerc  .gitignore  CITATION.bib  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  build.xml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checkpr.yml  deploy.yml  main.yml
docs/: conf.py  index.rst  modules.rst  pynmeagps.rst
examples/: __init__.py  benchmark.py  gpxtracker.py  nmeadump.py  nmeafile.py  nmeapollall.py  nmeapoller.py  nmeasocket.py  nmeastreamer.py  pynmeagps_usage.py  quecteldemo.md  quecteldemo.py  utilities.py
examples/webserver/: gpshttpserver.py  gpsstreamer.py  index.html  nmeaserver.py  scripts.js  styles.css
pynmea3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pynmeagps/: __init__.py  _version.py  nmeahelpers.py  nmeamessage.py  nmeareader.py  nmeatypes_core.py  nmeatypes_get.py  nmeatypes_poll.py  nmeatypes_set.py
pynmeagpscli/: __init__.py  nmeadump.py
src/pynmeagps/: __init__.py  _version.py  exceptions.py  nmeahelpers.py  nmeamessage.py  nmeareader.py  nmeatypes_core.py  nmeatypes_decodes.py  nmeatypes_get.py  nmeatypes_get_prop.py  nmeatypes_poll.py  nmeatypes_poll_prop.py  nmeatypes_set.py  nmeatypes_set_prop.py  socket_stream.py  socket_wrapper.py  socketwrapper.py
tests/: __init__.py  test_constructor.py  test_exceptions.py  test_parse.py  test_quectel.py  test_socket.py  test_static.py  test_stream.py  testsuite.py
