[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pynmeagps"
authors = [
    {name = "semuadmin", email = "semuadmin@semuconsulting.com"},
]
maintainers = [
  {name = "semuadmin", email = "semuadmin@semuconsulting.com"}
]
description = "NMEA protocol parser and generator"
version = "1.0.21"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved ::BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    ]

dependencies = [
]

[project.urls]
homepage = "https://github.com/semuconsulting/pynmeagps"
documentation = "https://www.semuconsulting.com/pynmeagps/"
repository = "https://github.com/semuconsulting/pynmeagps"
changelog = "https://github.com/semuconsulting/pynmeagps/blob/master/RELEASE_NOTES.md"

[project.optional-dependencies]
test = [
    "black >= 23.1",
    "pylint >= 2.17",
    "pytest >= 7.2",
    "pytest-cov >= 4.0",
    "coverage >= 7.2",
    "Sphinx >= 6.1.3",
    "sphinx-rtd-theme >= 1.2.0",
]

[tool.pylint]
exit-zero = ""
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report term-missing --cov-fail-under 95"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
